Indexing, Mapping & Self-Relations in Prisma Schema

--- a/moddule-23-prisma-blog-app/tsconfig.json
+++ b/moddule-23-prisma-blog-app/tsconfig.json
@@ -45,5 +45,5 @@
       "esModuleInterop": true,
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules","dist","src/generated"],
+  "exclude": ["node_modules","dist","generated/prisma"],
 }
