--- a/moddule-23-prisma-blog-app/package.json
+++ b/moddule-23-prisma-blog-app/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tsx watch src/server.ts"
+    "dev": "npx tsx watch src/server.ts",
+    "dev:admin": "npx tsx   src/scripts/seedAdmin.ts"
+
   },
   "keywords": [],
   "author": "",
